# lab_c-

./: .gitignore  CMakeLists.txt  LibraryImport.h  Mieszkaniec.cpp  Mieszkaniec.h  main.cpp  main1.cpp  nisza.cpp  organizm.h  zlab02.cpp  zlab02.h  zlab03.cpp  zlab03.h  zlab06.cpp  zlab06.h  zlab09.cpp  zlab09.h  zlab10.cpp  zlab10.h
Organizm/: generatorlosowy.cpp  generatorlosowy.h  main.cpp  nisza.h  organizm.cpp  organizm.h  osobniki.cpp  osobniki.h  sasiedztwo.cpp  sasiedztwo.h  ustawienia.h
